fixed horizontal scroll

--- a/styles/components/_pages/others/home.scss
+++ b/styles/components/_pages/others/home.scss
@@ -100,7 +100,7 @@
       }
     }
 
-    .investment-committee {
+    &.investment-committee {
       .committees {
         display: flex;
         justify-content: center;
